[BE][Fix] 사장님 가게 조회 시 전체 카테고리 목록을 response 하던 오류 수정, 미사용 response 변수 제거