@@ -4,6 +4,7 @@ import com.todayeat.backend._common.response.error.ErrorType;
 import com.todayeat.backend._common.response.error.exception.BusinessException;
 import com.todayeat.backend._common.util.S3Util;
 import com.todayeat.backend._common.util.SecurityUtil;
+import com.todayeat.backend.category.dto.CategoryInfo;
 import com.todayeat.backend.category.entity.StoreCategory;
 import com.todayeat.backend.category.mapper.CategoryMapper;
 import com.todayeat.backend.category.mapper.StoreCategoryMapper;
@@ -31,6 +32,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -103,10 +105,13 @@ public class StoreService {
 
         GetSellerStoreResponse getSellerStoreResponse = StoreMapper.INSTANCE.storeToGetSellerStoreResponse(store);
 
-        getSellerStoreResponse.setCategoryList(
-                categoryRepository.findAll().stream()
-                        .map(CategoryMapper.INSTANCE::categoryToCategoryInfo)
-                        .collect(Collectors.toList()));
+        List<CategoryInfo> categoryInfoList = storeCategoryRepository.findByStoreIdAndDeletedAtIsNull(storeId).stream()
+                .map(storeCategory -> categoryRepository.findById(storeCategory.getCategory().getId()))
+                .flatMap(Optional::stream)
+                .map(CategoryMapper.INSTANCE::categoryToCategoryInfo)
+                .toList();
+
+        getSellerStoreResponse.setCategoryList(categoryInfoList);
 
         return getSellerStoreResponse;
     }
